--- a/PipelineSimulator/PipelineSimulator/Base.lproj/Main.storyboard
+++ b/PipelineSimulator/PipelineSimulator/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -153,6 +153,9 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="advanceClock:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MNC-6P-qSb"/>
+                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow" translatesAutoresizingMaskIntoConstraints="NO" id="p5O-CX-W5A">
                                 <rect key="frame" x="205" y="327" width="10" height="24"/>
@@ -173,6 +176,9 @@
                                     <segment title="Two"/>
                                     <segment title="Three"/>
                                 </segments>
+                                <connections>
+                                    <action selector="instructionSetChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="YqI-T0-WOe"/>
+                                </connections>
                             </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Instruction Set" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="auo-BP-39t">
                                 <rect key="frame" x="105" y="31" width="111" height="24"/>
@@ -235,6 +241,19 @@ ADD R13, R14, R0</string>
                             <constraint firstItem="UmJ-sG-TSj" firstAttribute="centerX" secondItem="r03-Wp-YGI" secondAttribute="centerX" id="xJ5-Rm-zga"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="EX_bg" destination="d85-9a-trL" id="Ofx-2K-mJ9"/>
+                        <outlet property="EX_instr" destination="VhK-84-jaH" id="9a7-oR-zMQ"/>
+                        <outlet property="ID_bg" destination="JG7-6a-EeZ" id="HW4-7B-IW7"/>
+                        <outlet property="ID_instr" destination="uzV-3M-SV8" id="fAJ-Cl-7tH"/>
+                        <outlet property="IF_bg" destination="Tbz-xh-EMS" id="AsQ-aY-LM9"/>
+                        <outlet property="IF_instr" destination="iMH-43-ERC" id="qDz-Ja-t9B"/>
+                        <outlet property="MEM_bg" destination="UmJ-sG-TSj" id="oql-qd-fh0"/>
+                        <outlet property="MEM_instr" destination="TYM-r4-bPZ" id="gsb-bA-W6w"/>
+                        <outlet property="WB_bg" destination="vhd-um-kPE" id="o1a-Xf-eeu"/>
+                        <outlet property="WB_instr" destination="Bk0-B6-jrN" id="4Le-A1-gbf"/>
+                        <outlet property="instructionLabel" destination="lqw-fd-OpO" id="ol5-e4-WQf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
